...
                    <View style={styles.centeredView}>
                        <View style={styles.modalView}>
                            <Pressable
                                style={[styles.button, styles.buttonClose]}
                                onPress={() => setSimpleModal(!simpleModal)}
                            >
                                <Text style={styles.textStyle}>Hide Modal</Text>
                            </Pressable>
                            <Select clearable={true} options={DATA} />
                            <Select clearable={true} options={DATA} />
                        </View>
                    </View>
                </SelectModalProvider>
...
            </ReactNativeModal>

            <Pressable
                style={[styles.button, styles.buttonOpen]}
                onPress={() => setSimpleModal(true)}
            >
                <Text style={styles.textStyle}>Show Modal from react-native</Text>
            </Pressable>

            <Pressable
                style={[styles.button, styles.buttonOpen]}
                onPress={() => setPageSheetModal(true)}
            >
...
