...
    noOptionsText?: string;

    /**
     * Placeholder text
     *
     * @category Text
     * @default "Select..."
     */
    placeholderText?: string;

    //---ANIMATIONS---//
    /**
     *  If `true` toggling the select is animated
...

    //---ACCESSIBILITY---//
    /**
     * selectControlClearOptionA11yLabel
     *
     * @category Accessibility
     * @default "Clear a chosen option"
     */
    selectControlClearOptionA11yLabel?: string;

    /**
     * selectControlOpenDropdownA11yLabel
     *
...
