...

export const Home = () => {
    // eslint-disable-next-line @typescript-eslint/no-explicit-any
    const { navigate } = useNavigation<any>();
    return (
        <FlatList
            testID="Examples List"
            data={ROUTES}
            numColumns={3}
            columnWrapperStyle={{
                flex: 1,
                marginHorizontal: 5,
                justifyContent: 'space-around',
...
