...
                style={[styles.arrowIcon, isOpened && styles.arrowIconOpened, iconCustomStyles]}
            />
        );
    }, [iconCustomStyles, arrowImageProps, isOpened, rotateAnimation]);

    return (
        <View testID="Dropdown arrow" {...arrowContainerProps} style={containerCustomStyles}>
            {renderImage}
        </View>
    );
};

type Styles = {
...
