...
            }
        };

        return (
            <FlatList
                ref={flatListRef}
                testID="Options list"
                accessibilityLabel="Options list"
                accessibilityState={accessibilityState}
                bounces={false}
                keyboardShouldPersistTaps="handled"
                persistentScrollbar={true}
                ListEmptyComponent={loading ? <Loading /> : <NoOptions />}
...
