...
        containerCustomStyles,
        onPressClearOption,
    } = useClearOption();

    return (
        <Pressable
            accessibilityLabel="Clear a selected option"
            accessibilityRole="button"
            accessible={true}
            accessibilityState={{ disabled }}
            hitSlop={{ right: 3, left: 3 }}
            disabled={disabled}
            {...clearOptionButtonProps}
...
