...
        resolvedPlaceholder,
        onChangeText,
    } = useSelectInput();

    return (
        <TextInput
            accessibilityLabel="Place text"
            {...selectInputProps}
            ref={searchInputRef}
            editable={!disabled}
            placeholder={resolvedPlaceholder}
            placeholderTextColor={placeholderTextColor}
            style={
...
