...
    multiSelection,
    selectControlArrowImageStyle,
    customSelectControlArrowIconSource,
    onPressSelectControl,
}: ArrowProps) => {
    const rotateAnimation = useAnimation({ isOpened, animation });
    const accessibilityLabel = 'Arrow for opening dropdown';

    const resolveContent = () => {
        const arrowSource = customSelectControlArrowIconSource ?? arrowImage;

        if (rotateAnimation) {
            const rotate = rotateAnimation.interpolate({
...
