...
                }}
            />
        ),
    },
];

export const Categorized = () => {
    return (
        <SafeAreaView style={{ alignItems: 'center' }}>
            <FlatList
                contentContainerStyle={{
                    flex: 1,
                    justifyContent: 'center',
...
